--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "next": "15.5.4",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -21,8 +20,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
