--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "clsx": "^2.1.1",
+    "lucide": "^0.544.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
