--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "clsx": "^2.1.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
