--- a/web/package.json
+++ b/web/package.json
@@ -6,16 +6,19 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "user:create": "node ./scripts/create-user.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
